welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:15: error: type mismatch;
 found   : Unit
 required: Boolean
}while (vuBiscuit())
                 ^Program:20: error: not found: value nbPas
		for (i<- 1 to nbPas){
                              ^Program:26: error: type mismatch;
 found   : Unit
 required: Boolean
}
^