welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
do{
	var nbPas = 0 
	for(i<- 1 to 6){
		for (i<- 1 to 6){
			avance()
			nbPas = nbPas + 1 
		}
		for ( i<- 1 to nbPas){
			recule()
		}
	}
	
}while (vuBiscuit())


def vuBiscuit(){
	if (estSurBiscuit()){
		for (i<- 1 to nbPas){
			recule()
		}
	return true
	}
}	
}


